Bug 44715 - FILEOPEN: rtf import fails to set cell borders correctly
Summary: FILEOPEN: rtf import fails to set cell borders correctly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.4 release
Hardware: x86 (IA32) All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.2.0 target:4.1.2
Keywords: filter:rtf
: 64864 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-12 03:47 UTC by Bernard Moreton
Modified: 2015-12-17 11:53 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Test file with screenshots (170.88 KB, application/zip)
2012-01-16 09:11 UTC, pm2kan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernard Moreton 2012-01-12 03:47:53 UTC
This affects boxes within a table.  For the top left corner of the box, if the left border (clbrdrl) is defined before the top border (clbrdrt), then the left border loses weight (eg shows as 25pt when it should be 75pt).  If the top border is defined before the left border, then the top border loses weight in the same way.  The same is true for all four corner cells in the box.

This is new - the import worked a year ago in Ubuntu (10.04) soffice, and had for several years before.
Comment 1 Jean-Baptiste Faure 2012-01-12 22:18:47 UTC
Please could you try again with the current beta version for LO 3.5.0 ? LO 3.5 has a new completely reworked RTF filter.
beta version are available for download here : http://www.libreoffice.org/download/pre-releases/

Best regards. JBF
Comment 2 Bernard Moreton 2012-01-13 04:46:45 UTC
LOdev 3.5.0beta2 (W32) deals with the particular problem better than 3.4.4, though handling of borders in general and cell sizing on import is not yet satisfactory.
Comment 3 pm2kan 2012-01-16 09:11:05 UTC
Created attachment 55646 [details]
Test file with screenshots

Added test file for this BR. In 
LOdev 3.6.0alpha0+
Build ID: aa7e105-b2dd236-9eed775-d06f752-4dba2d1
libreoffice-3-5-branch-point
it looks better than in 3.4.4. But some lines are too high. Also in dev build image moved from the second column to the first.
Comment 4 Miklos Vajna 2012-01-22 02:42:24 UTC
Assign.
Comment 5 Miklos Vajna 2013-08-17 09:22:45 UTC
I just tested this with current master, the most obvious problem is that font size is too large, that causes the document to have 3 pages instead of a single one.
Comment 6 Commit Notification 2013-08-17 10:37:46 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b9c1a9b9aa41dbbb6bed0c77f4370ab6105c7fb1

fdo#44715 RTF import: reset styles in tables on RTF_PARD



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Miklos Vajna 2013-08-17 10:46:20 UTC
With the above fix, the import result of the bugdoc is reasonable. I see no cell border problems, probably those got fixed in the meantime. I'll backport to -4-1, then mark this bug as resolved.
Comment 8 Miklos Vajna 2013-08-17 13:15:56 UTC
Resolved on master, -4-1 review: https://gerrit.libreoffice.org/5471
Comment 9 Commit Notification 2013-08-18 14:11:07 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=28771ae622f648a6e424d3d664333e0407df4739&h=libreoffice-4-1

fdo#44715 RTF import: reset styles in tables on RTF_PARD


It will be available in LibreOffice 4.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 pm2kan 2013-08-21 10:08:05 UTC
On attached test document borders looks fine.
Version: 4.1.2.0.0+
Build ID: 6215ebbe96c2e827b4e607986372ed8ebaab903
OS: Win8 Pro x64
Comment 11 Miklos Vajna 2013-09-22 08:44:52 UTC
*** Bug 64864 has been marked as a duplicate of this bug. ***
Comment 12 Robinson Tryon (qubit) 2015-12-17 11:53:18 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]